--- a/styles/table.css
+++ b/styles/table.css
@@ -10,4 +10,36 @@ table {
     margin: calc(var(--size) * 1);
     
     user-select: none;
+    border-spacing: 1px;
+    -webkit-border-horizontal-spacing: 1px;
+    -webkit-border-vertical-spacing: 1px;
+}
+
+#ngrams td:not(:first-child) {
+    cursor: default;
+}
+
+.excellent {
+    background-color: #46685D;
+    color: white;
+}
+
+.good {
+    background-color: #6D9580;
+    color: white;
+}
+
+.okay {
+    background-color: #A1A9A4;
+    color: black;
+}
+
+.poor {
+    background-color: #D7A8B8;
+    color: black;
+}
+
+.terrible {
+    background-color: #B35B6D;
+    color: white;
 }
